--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Lembretes — Crónica de Produtividade</title>
     <meta name="description" content="TodoPDA — Crónica de Produtividade. Frontend estático com autenticação JWT e CRUD de tarefas." />
-    <link rel="icon" href="./assets/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="./todoPDA-frontend/assets/favicon.svg" type="image/svg+xml" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;0,900;1,700;1,900&family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="./src/styles/tokens.css" />
-    <link rel="stylesheet" href="./src/styles/base.css" />
-    <link rel="stylesheet" href="./src/styles/layout.css" />
-    <link rel="stylesheet" href="./src/styles/components.css" />
-    <link rel="stylesheet" href="./src/styles/a11y.css" />
+ 
+
+<link rel="stylesheet" href="./todoPDA-frontend/src/styles/tokens.css" />
+<link rel="stylesheet" href="./todoPDA-frontend/src/styles/base.css" />
+<link rel="stylesheet" href="./todoPDA-frontend/src/styles/layout.css" />
+<link rel="stylesheet" href="./todoPDA-frontend/src/styles/components.css" />
+<link rel="stylesheet" href="./todoPDA-frontend/src/styles/a11y.css" />
+
+<script type="module" src="./todoPDA-frontend/src/js/main.js"></script>
+
 </head>
 
 <body>
