--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Lembretes — Crónica de Produtividade</title>
-    <meta name="description" content="TodoPDA — Crónica de Produtividade. Frontend estático com autenticação JWT e CRUD de tarefas." />
+    <meta name="description" content="TodoPDA — Cronica de Produtividade. Frontend estático com autenticação JWT e CRUD de tarefas." />
     <link rel="icon" href="./todoPDA-frontend/assets/favicon.svg" type="image/svg+xml" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -37,9 +37,9 @@
 
     <header class="site-header" role="banner">
         <div class="site-header__inner">
-            <h1 class="brand" aria-label="TodoPDA — Crónica de Produtividade">
+            <h1 class="brand" aria-label="TodoPDA — Cronica de Produtividade">
                 <span class="brand__name">Lembretes</span>
-                <span class="brand__tag">Crónica de Produtividade</span>
+                <span class="brand__tag">Cronica de Produtividade</span>
             </h1>
 
             <div class="header-actions" id="header-actions" hidden>
