--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
                 <form id="auth-form" class="form" novalidate>
                    <form id="auth-form" class="form" novalidate>
-    <div class="field" id="field-nome" hidden>
-        <label class="label" for="auth-nome">Nome completo</label>
-        <input class="input" id="auth-nome" name="nome" type="text" autocomplete="name" placeholder="Como quer ser chamado?" />
-    </div>
+   <div class="field" id="field-nome" hidden style="display: none;">
+    <label class="label" for="auth-nome">Nome completo</label>
+    <input class="input" id="auth-nome" name="nome" type="text" autocomplete="name" placeholder="Como quer ser chamado?" />
+</div>
 
     <div class="field">
         <label class="label" for="auth-email">E-mail</label>
